# i-SAS_documentation

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
docs/: .buildinfo  AnalysisSolver_index.html  GUIController_index.html  GUI_index.html  Interface_index.html  SensorController_index.html  SensorModeler_index.html  SensorSimulator_index.html  StructuralAnalysisSolver_index.html  StructuralModeler_index.html  Visualizer_index.html  analysis_solver.html  basic_gui_controller.html  basic_sensor_modeler.html  basic_visualizer.html  data_logger.html  directional_wave_spectra_estimator.html  fem_utils.html  finite_element_modeler.html  genindex.html  gui_controller.html  iSAS.html  ifem.html  ifem_matlab.html  index.html  nastran_manager.html  nmri_sensor_controller.html  objects.inv  point_sensor.html  py-modindex.html  rbf_interpolator.html  response_kalman_filter.html  search.html  searchindex.js  sensor_controller.html  sensor_modeler.html  sensor_postprocessor.html  sensor_simulator.html  ship_visualizer.html  structural_analysis_solver.html  (+3 more)
docs/.doctrees/: AnalysisSolver_index.doctree  GUIController_index.doctree  GUI_index.doctree  Interface_index.doctree  SensorController_index.doctree  SensorModeler_index.doctree  SensorSimulator_index.doctree  StructuralAnalysisSolver_index.doctree  StructuralModeler_index.doctree  Visualizer_index.doctree  analysis_solver.doctree  basic_gui_controller.doctree  basic_sensor_modeler.doctree  basic_visualizer.doctree  data_logger.doctree  directional_wave_spectra_estimator.doctree  environment.pickle  fem_utils.doctree  finite_element_modeler.doctree  gui_controller.doctree  iSAS.doctree  ifem.doctree  (+24 more)
documentation/: package_list.txt
package_name/: template.py
(+87 files in other folders)
