[tool.poetry]
name = "documentation"
version = "0.0.1"
description = "documentation for integrate Structural Analysis System"
authors = ["Makito Kobayashi", "Kohei Mikami"]
repository = "https://github.com/i-SAS/i-SAS_documentation"

[tool.poetry.dependencies]
python = "^3.6"
pandas = "*"
pyyaml = "*"
numpy = "*"
scipy = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-isort = "*"
flake8-quotes = "*"
ipython = "*"
jupyter = "*"
pep8-naming = "*"
sphinx-rtd-theme = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
